--- a/WebforMyself.html
+++ b/WebforMyself.html
@@ -9,7 +9,9 @@
 			margin: 0px;
 		}
 		.logo_left_img{
-			background-color: #33334F;
+			background-color: #2b394a;
+			border: solid 4px;
+			border-color: #2b394a;
 		}
 		.logo{
 			width: 241px;
@@ -19,24 +21,41 @@
 			float: right;
 			border-right: solid 1px;
 			border-color: #ffffff;
+			background-position: right center;
+			padding-bottom: 100px;
+			padding-left: 9px;
+			padding-right: 9px;	
 			color: #FFFFFF;
-			padding:9px;
+			font-family: gerbera;
 		}
 		.text:hover{
-			float: right;
-			border-right: solid 1px;
-			border-color: #ffffff;
-			color: #FFFFFF;
-			padding:9px;
 			text-decoration: underline;
+			
+		}
+		.text_last{
+			float: right;
+			background-position: right center;
+			padding-bottom: 100px;
+			padding-left: 9px;
+			padding-right: 9px;	
+			color: #FFFFFF;
+			font: lighter;
+		}
+		.text_last:hover{
+			text-decoration: underline;
+		}
+		.logo_left_img>.div_menu{
+			width: 807px;
+			height: 57px;
+			background-color: #2b394a;
 		}
 	</style>
 </head>
 <body>
 	<header>
 		<div class="logo_left_img">
-			<img src="logo.jpg">
-			<p class="text">
+			<img src="logo.jpg" class="logo">
+			<p class="text_last">
 				Форум
 			</p>
 			<p class="text">
