--- a/WebforMyself.html
+++ b/WebforMyself.html
@@ -20,19 +20,20 @@
 			border-right: solid 1px;
 			border-bottom: solid 1px;
 			border-color: #ffffff;
-			padding-left: 8px;
-			padding-right: 9px;
-			padding-bottom: 100px;
+			border-bottom-color: #2b394a ;
+			padding-left: 20px;
+			padding-right: 20px;
+			padding-bottom: 9px;
 			float: right;
-			overflow: hidden;
+			overflow: visible;
 		}
 		.text-1:hover{
 			text-decoration: underline;
 		}
 		.text-2{
 			color: #ffffff;
-			padding-left: 8px;
-			padding-right: 9px;
+			padding-left: 20px;
+			padding-right: 20px;
 			padding-bottom: 100px;
 			float: right;
 		}
