--- a/WebforMyself.html
+++ b/WebforMyself.html
@@ -24,6 +24,7 @@
 			padding-left: 20px;
 			padding-right: 20px;
 			padding-bottom: 6px;
+			padding-top: 1px;
 			float: right;
 			overflow: visible;
 		}
