--- a/WebforMyself.html
+++ b/WebforMyself.html
@@ -10,6 +10,7 @@
 		}
 		.container_left_image{
 			background-color: #2b394a;
+			float: center;
 		}
 		.logo{
 			padding-left: 8px;
@@ -23,7 +24,7 @@
 			border-bottom-color: #2b394a ;
 			padding-left: 20px;
 			padding-right: 20px;
-			padding-bottom: 6px;
+			padding-bottom: 4px;
 			padding-top: 1px;
 			float: right;
 			overflow: visible;
@@ -34,7 +35,7 @@
 		.text-2{
 			color: #ffffff;
 			padding-left: 20px;
-			padding-right: 20px;
+			padding-right: 30px;
 			padding-bottom: 100px;
 			float: right;
 		}
